Fix clean (#6)
* -

* fix code analysis