@@ -5,6 +5,7 @@ import com.noellimx.main.exception.controller.NotFoundException;
 import com.noellimx.main.respository.UserRepository;
 import jakarta.transaction.Transactional;
 import java.util.Arrays;
+import java.util.List;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.User;
@@ -86,7 +87,7 @@ public class MyUserDetailsService implements UserDetailsManager {
 
     return new User(user.getUsername(), "", true, true, true,
         true,
-        Arrays.asList());
+        List.of());
   }
 
   @Override
